Fixed edit and delete button alignment in the admin dashboard

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -27,6 +27,7 @@ body {background: #252830; height: 100vh;}
 #backButton:hover {text-decoration: none; color: #AEB0AE;}
 .panel-item, .panel-checkout {border-radius: 0;}
 .btn-success {background: #A2AD7E; border-color: #8a9a58;}
+#productOptions a, #productOptions form {margin: 0.3em 0 0 0;}
 footer {width:100%; height:auto; position:absolute; bottom:0; left:0; background: #39393d; padding: 0; margin-top: 2em; color: white;}
 footer h4 {color: #666666; padding: 0.6em;}
 #footerNav {list-style: none; padding-left: 0; margin: 0;}
